backend/services.yml
apiVersion: v1
kind: Service
metadata:
  name: ks-analysis-service
spec:
  selector:
    app: ks-analysis
  ports:
  - port: 8082
    targetPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: ks-core-service
spec:
  selector:
    app: ks-core
  ports:
  - port: 8081
    targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: ks-auth-service
spec:
  selector:
    app: ks-auth
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: zoo1
  labels:
    app: zookeeper-1
spec:
  ports:
  - name: client
    port: 2181
    protocol: TCP
  - name: follower
    port: 2888
    protocol: TCP
  - name: leader
    port: 3888
    protocol: TCP
  selector:
    app: zookeeper-1
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  labels:
    name: kafka
spec:
  ports:
  - port: 9092
    name: kafka-port
    protocol: TCP
  selector:
    app: kafka
    id: "0"
  type: LoadBalancer
