backend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ks-project-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /ks-auth
        pathType: Prefix
        backend:
          service:
            name: ks-auth-service
            port: 
              number: 8080
      - path: /ks-core
        pathType: Prefix
        backend:
          service:
            name: ks-core-service
            port: 
              number: 8081
      - path: /ks-analysis
        pathType: Prefix
        backend:
          service:
            name: ks-analysis-service
            port: 
              number: 8082
